# NDN_Service_Framework

./: .gitattributes  .gitignore  .pylintrc  AGENTS.md  Agents.md  FINAL_SECURITY_AUDIT.md  README.md  README_ch.md  SECURITY_INVARIANTS.md  compile_commands.json  install_ndnsf_stack.sh  libndn-service-framework.pc.in  pyrightconfig.json  wscript
CodeGenerator/: NDNSFCodeGenerator.py  app.yml
Configuration/: ProviderPolicy.sample  ServiceAuthorizationPolicy.sample  UserPolicy.sample
Experiments/: GoExperiment_AutoConfig.py  Makefile  NDNSFAdhoc.py  NDNSFAdhoc_Mobility.py  NDNSFAdhoc_Mobility_1Drone.py  NDNSFExperiment.py  NDNSFExperiment_AutoConfig.py  NDNSFExperiment_NEW.py  NDNSF_AI_Collaboration_Minindn.py  NDNSF_DI_AppApi_Smoke.py  NDNSF_DI_Compare_Yolo_Plans.py  NDNSF_DI_GUI.py  NDNSF_DI_GUI_Minindn.py  NDNSF_DI_OnnxExecutor_Smoke.py  NDNSF_DI_PyTorch2x2_Minindn.py  NDNSF_DI_Run_Minindn_Regressions.py  NDNSF_DI_Yolo2x2_Minindn.py  NDNSF_DI_Yolo2x2_Repo_Minindn.py  NDNSF_DI_YoloSplit_Minindn.py  NDNSF_DistributedRepo_Generic_Minindn.py  NDNSF_NewAPI_Minindn_Perf.py  NDNSF_Python_Hello_Minindn.py  NDNSF_Python_Minindn_Perf.py  NDNSF_TextToImage_Status_Minindn.py  NSCAdhoc.py  (+30 more)
NDNSF-DistributedRepo/pythonWrapper/: README.md  README_ch.md  pyproject.toml  setup.py
NDNSF-DistributedRepo/pythonWrapper/py_repoclient/: __init__.py
NDNSF-DistributedRepo/pythonWrapper/src/py_repoclient/: _py_repoclient.cpp
pythonWrapper/: README.md  pyproject.toml  setup.py
pythonWrapper/ndnsf/: __init__.py  api.py  runtime.py  service.py
pythonWrapper/src/ndnsf/: _ndnsf.cpp
(+277 files in other folders)
