[build-system]
requires = ["setuptools>=61", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "ndnsf"
version = "0.1.0"
description = "Python orchestration wrapper for NDNSF C++ applications"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "NDNSF Developers"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ndnsf*"]
